--- a/src/componentes/Cabecalhos/CabecalhoProjetos/Cabecalho.module.css
+++ b/src/componentes/Cabecalhos/CabecalhoProjetos/Cabecalho.module.css
@@ -71,6 +71,18 @@
     align-items: right;
 }
 
-button:hover {
+.button:hover {
+    background-color: rgb(5, 77, 170);
+}
+
+.button__projetos:hover {
+    background-color: rgb(5, 77, 170);
+}
+
+.button__certificados:hover {
+    background-color: rgb(5, 77, 170);
+}
+
+.button__sobremim:hover {
     background-color: rgb(5, 77, 170);
 }
