--- a/src/componentes/Certificados/certificados.module.css
+++ b/src/componentes/Certificados/certificados.module.css
@@ -5,8 +5,8 @@
 }
 
 .texto {
-    position: absolute;
     text-align: center;
+    position: absolute;
     left: 42%;
     top: 56%;
     color: #FFF;
@@ -69,4 +69,82 @@ button:hover {
 .linkedin {
     top: 35px;
     position: relative;
+}
+
+.alura {
+    top: 35px;
+    position: relative;
+    right: 35px;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        display: flex;
+    }
+
+    .texto {
+        position: absolute;
+        text-align: center;
+        left: 30%;
+        top: 56%;
+        color: #FFF;
+        font-family: Krona One;
+        font-size: 16px;
+    }
+
+    .foto {
+        width: 90px;
+        height: 90px;
+    }
+
+    .inner {
+        display: flex;
+    }
+
+    .item {
+        min-height: 200px;
+        min-width: 300px;
+        padding: 5px;
+    }
+
+    .button {
+        border-radius: 31px;
+        background: linear-gradient(180deg, #2B6327 0%, rgba(43, 99, 39, 0.00) 100%);
+        box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.25);
+        font-size: 16px;
+        padding: 5px 15px 5px 15px;
+        position: absolute;
+        top: 275px;
+        left: 145px;
+        border-bottom: 10px;
+        border-right: 10px;
+        color: #FFF;
+        transition: background-color 0.3s ease;
+    }
+
+    .text {
+        color: #FFF;
+        text-decoration: none;
+    }
+
+    button:hover {
+        background-color: rgb(95, 133, 6);
+    }
+
+    .icons {
+        position: absolute;
+        display: flex;
+        width: 12px;
+    }
+
+    .git {
+        right: 20px;
+        position: relative;
+        width: 12px;
+    }
+
+    .linkedin {
+        position: relative;
+        width: 12px;
+    }
 }
