--- a/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
+++ b/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
@@ -1,4 +1,4 @@
-.button {
+.buttonPaginaInicio {
     border-radius: 31px;
     background: linear-gradient(180deg, #2B6327 0%, rgba(43, 99, 39, 0.00) 100%);
     box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.25);
@@ -78,4 +78,46 @@ button:hover {
 .linkedin {
     top: 35px;
     position: relative;
+}
+
+.alura {
+    top: 35px;
+    position: relative;
+    right: 35px;
+}
+
+@media screen and (max-width: 768px) {
+    .icons {
+        position: absolute;
+        right: 20px;
+        top: 2%;
+        display: flex;
+    }
+
+    .git {
+        top: 30px;
+        right: 20px;
+        position: relative;
+    }
+
+    .linkedin {
+        top: 30px;
+        position: relative;
+    }
+
+    .alura {
+        top: 29px;
+        position: relative;
+        right: 38px;
+    }
+
+    .imagem_grid {
+        display: block;
+        left: 22px;
+    }
+
+    .imagem_item {
+        left: 10%;
+        position: relative;
+    }
 }
