--- a/src/componentes/Projetos/projetos.module.css
+++ b/src/componentes/Projetos/projetos.module.css
@@ -49,7 +49,7 @@
     text-decoration: none;
 }
 
-buttonproj:hover {
+.buttonproj:hover {
     background-color: rgb(51, 5, 255);
 }
 
@@ -69,4 +69,10 @@ buttonproj:hover {
 .linkedin {
     top: 35px;
     position: relative;
+}
+
+.alura {
+    top: 35px;
+    position: relative;
+    right: 35px;
 }
