--- a/src/componentes/Textos/TextoPaginaInicial/minhaFoto.module.css
+++ b/src/componentes/Textos/TextoPaginaInicial/minhaFoto.module.css
@@ -42,3 +42,27 @@
     top: 220px;
     left: 340px;
 }
+
+@media screen and (max-width: 768px) {
+    .minhaFoto {
+        width: 170px;
+        height: 170px;
+        top: 19%;
+    }
+
+    .textos {
+        top: 20%;
+        left: 45%;
+        font-size: 16px;
+        width: 50%;
+        height: 100%;
+    }
+
+    .textos__h2 {
+        top: 24%;
+        left: 45%;
+        font-size: 12px;
+        width: 52%;
+        height: 100%;
+    }
+}
