--- a/src/componentes/Svgs/Linhas/linhas.module.css
+++ b/src/componentes/Svgs/Linhas/linhas.module.css
@@ -23,12 +23,12 @@
 @media screen and (max-width: 768px) {
     .linhasvg {
         width: 100%;
-        top: 117px;
+        top: 1350%;
         width: 100%;
     }
 
     .linhasvg2 {
         width: 100%;
-        top: 160px;
+        top: 2000%;
     }
 }
