--- a/src/componentes/Backgrounds/BackgroundPaginaInicial/BackgroundInicial.module.css
+++ b/src/componentes/Backgrounds/BackgroundPaginaInicial/BackgroundInicial.module.css
@@ -2,20 +2,33 @@
     background-image:
         linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
         url('../../../assets/background/image-1.png');
-    width: 54.5;
-    height: 60%;
+    width: 100%;
+    height: 100%;
     background-size: cover;
     padding: 25rem;
     visibility: 50%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width:200px) and (max-width: 500px) {
     .backgroundIni {
         background-image:
             linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
             url('../../../assets/background/image-4.png');
-        width: 100px;
-        height: 1300px;
+        width: 100%px;
+        height: 100rem;
+        background-size: cover;
+        visibility: 50%;
+        padding: 38%;
+    }
+}
+
+@media screen and (min-width:800px) and (max-width: 1360px) {
+    .backgroundIni {
+        background-image:
+            linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
+            url('../../../assets/background/image-1.png');
+        width: 100%;
+        height: 50%;
         background-size: cover;
         visibility: 50%;
         padding: 38%;
