atualiza botão PROJETOS

--- a/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
+++ b/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
@@ -127,4 +127,13 @@ button:hover {
         position: relative;
         background-size: cover;
     }
+
+    .button__proj {
+        position: relative;
+        background-size: cover;
+    }
+
+    .img {
+        gap: 10px;
+    }
 }
