--- a/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
+++ b/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
@@ -86,6 +86,10 @@ button:hover {
     right: 35px;
 }
 
+.container {
+    
+}
+
 @media screen and (max-width: 768px) {
     .icons {
         position: absolute;
