--- a/src/componentes/Backgrounds/BackgroundPaginaInicial/BackgroundInicial.module.css
+++ b/src/componentes/Backgrounds/BackgroundPaginaInicial/BackgroundInicial.module.css
@@ -18,7 +18,7 @@
         height: 100rem;
         background-size: cover;
         visibility: 50%;
-        padding: 38%;
+        padding: 20rem;
     }
 }
 
@@ -26,11 +26,11 @@
     .backgroundIni {
         background-image:
             linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
-            url('../../../assets/background/image-5.png');
+            url('../../../assets/background/image-1.png');
         width: 100%;
         height: 50%;
         background-size: cover;
         visibility: 50%;
-        padding: 38%;
+        padding: 20rem;
     }
 }
