--- a/src/componentes/Textos/TextoPaginaInicial/minhaFoto.module.css
+++ b/src/componentes/Textos/TextoPaginaInicial/minhaFoto.module.css
@@ -4,17 +4,12 @@
     width: 337px;
     height: 337px;
     flex-shrink: 0;
-    position: absolute;
     border-radius: 40px;
-    top: 114px
+    top: 114px;
+    background-size: cover;
 }
 
 .textos {
-    position: absolute;
-    top: 150px;
-    left: 340px;
-    width: 423px;
-    height: 41px;
     flex-shrink: 0;
     color: #FFF;
     font-family: Krona One;
@@ -22,25 +17,28 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    background-size: cover;
 }
 
 .foto {
     justify-content: space-between;
     align-items: center;
+    position: absolute;
+    display: flex;
+    top: 14%;
+    background-size: cover;
+    width: 90%;
 }
 
 .textos__h2 {
-    width: 1003px;
-    height: 207px;
     flex-shrink: 0;
     color: #FFF;
     font-size: 26px;
     font-style: normal;
     font-weight: 400;
     line-height: 140%;
-    position: absolute;
-    top: 220px;
-    left: 340px;
+    width: 60%;
+    background-size: cover;
 }
 
 @media screen and (max-width: 768px) {
@@ -54,15 +52,17 @@
         top: 17%;
         left: 45%;
         font-size: 16px;
-        width: 50%;
-        height: 10%;
+        width: 100%;
     }
 
     .textos__h2 {
-        top: 21%;
+        top: 30%;
         left: 45%;
         font-size: 12px;
-        width: 52%;
-        height: 10%;
+        width: 90%;
+    }
+
+    .foto {
+        top: 16%;
     }
 }
