--- a/src/componentes/Box/box.module.css
+++ b/src/componentes/Box/box.module.css
@@ -1,19 +1,21 @@
-.box {
-    width: 200px;
-    height: 200px;
-    top: 30%;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-    position: absolute;
-}
+@media screen and (max-width: 768px) {
+    .box {
+        width: 200px;
+        height: 200px;
+        top: 30%;
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        opacity: 0;
+        transform: translateY(20px);
+        transition: opacity 0.5s ease, transform 0.5s ease;
+        position: absolute;
+    }
 
-.reveal {
-    opacity: 1;
-    transform: translateY(0);
+    .reveal {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
