--- a/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
+++ b/src/componentes/PaginaDeInicio/paginaDeInicio.module.css
@@ -144,3 +144,22 @@ button:hover {
     }
 
 }
+
+@media screen and (min-width: 800px) {
+    .imagem_grid {
+        opacity: 0;
+        animation: revealAnimation 1s ease-in-out forwards;
+    }
+
+    @keyframes revealAnimation {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+}
