--- a/src/componentes/Backgrounds/BackgroundPaginaInicial/BackgroundInicial.module.css
+++ b/src/componentes/Backgrounds/BackgroundPaginaInicial/BackgroundInicial.module.css
@@ -2,9 +2,8 @@
     background-image:
         linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
         url('../../../assets/background/image-1.png');
-    width: 100%;
-    height: 100%;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
     padding: 25rem;
     visibility: 50%;
 }
@@ -18,19 +17,29 @@
         height: 100rem;
         background-size: cover;
         visibility: 50%;
-        padding: 20%;
+        padding: 20;
     }
 }
 
-@media screen and (min-width:800px) and (max-width: 1360px) {
+@media screen and (min-width: 1024) {
     .backgroundIni {
         background-image:
             linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
             url('../../../assets/background/image-1.png');
-        width: 100%;
-        height: 50%;
-        background-size: cover;
+        background-position: center;
+        background-size: contain;
         visibility: 50%;
         padding: 20rem;
+    }
+}
+
+@media screen and (min-width:1660) {
+    .backgroundIni {
+        background-image:
+            linear-gradient(135deg, rgba(0, 58, 10, 0.7) 10%, rgba(0, 0, 0, 0.90) 100%, rgba(0, 0, 0, 0.1)),
+            url('../../../assets/background/image-1.png');
+        background-position: center;
+        background-size: contain;
+        visibility: 50%;
     }
 }
