--- a/src/componentes/Backgrounds/BackgroundPaginaProjetos/BackgroundProjeto.module.css
+++ b/src/componentes/Backgrounds/BackgroundPaginaProjetos/BackgroundProjeto.module.css
@@ -2,9 +2,22 @@
     background-image:
         linear-gradient(135deg, rgba(5, 6, 44, 0.925) 8.69%, rgba(23, 10, 94, 0.822) 100%, rgba(0, 0, 0, 0.205) 100%),
         url('../../../assets/background/image-3.png');
-    width: 54.5;
-    height: 60%;
+    width: 100%;
+    height: 100%;
     background-size: cover;
     padding: 25rem;
     visibility: 50%;
+}
+
+@media screen and (min-width:200px) and (max-width: 500px) {
+    .backgroundProj {
+        background-image:
+            linear-gradient(135deg, rgba(5, 6, 44, 0.925) 8.69%, rgba(23, 10, 94, 0.822) 100%, rgba(0, 0, 0, 0.205) 100%),
+            url('../../../assets/background/image-7.png');
+        width: 100%;
+        height: 100rem;
+        background-size: cover;
+        visibility: 50%;
+        padding: 20;
+    }
 }
