--- a/src/componentes/Projetos/projetos.module.css
+++ b/src/componentes/Projetos/projetos.module.css
@@ -5,8 +5,8 @@
 }
 
 .texto {
-    position: absolute;
     text-align: center;
+    position: absolute;
     left: 42%;
     top: 56%;
     color: #FFF;
@@ -45,6 +45,7 @@
 }
 
 .text {
+    display: block;
     color: #FFF;
     text-decoration: none;
 }
@@ -56,8 +57,10 @@
 .icons {
     position: absolute;
     right: 20px;
-    top: 12%;
+    top: 13%;
     display: flex;
+    background-size: auto;
+    z-index: 9999;
 }
 
 .git {
@@ -75,4 +78,61 @@
     top: 35px;
     position: relative;
     right: 35px;
+}
+
+@media screen and (max-width: 768px) {
+    .icons {
+        position: absolute;
+        right: 20px;
+        top: 2%;
+        display: flex;
+    }
+
+    .git {
+        top: 30px;
+        right: 20px;
+        position: relative;
+    }
+
+    .linkedin {
+        top: 30px;
+        position: relative;
+    }
+
+    .alura {
+        top: 29px;
+        position: relative;
+        right: 38px;
+    }
+
+    .imagem_grid {
+        display: block;
+        left: 4%;
+        top: 40%;
+    }
+
+    .imagem_item {
+        left: 10%;
+        position: relative;
+        padding: 10px;
+    }
+
+    .buttonPaginaInicio {
+        position: relative;
+        background-size: cover;
+    }
+
+    .button__proj {
+        position: relative;
+        background-size: cover;
+    }
+
+    .img {
+        gap: 10px;
+    }
+
+    .box {
+        position: absolute;
+    }
+
 }
