--- a/src/componentes/Textos/TextoProjetos/minhaFoto.module.css
+++ b/src/componentes/Textos/TextoProjetos/minhaFoto.module.css
@@ -13,7 +13,7 @@
     flex-shrink: 0;
     color: #FFF;
     font-family: Krona One;
-    font-size: 34px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -25,7 +25,7 @@
     align-items: center;
     position: absolute;
     display: flex;
-    top: 14%;
+    top: 13%;
     background-size: cover;
     width: 90%;
 }
@@ -39,4 +39,31 @@
     line-height: 140%;
     width: 60%;
     background-size: cover;
+}
+
+@media screen and (max-width: 768px) {
+    .minhaFoto {
+        width: 170px;
+        height: 170px;
+        top: 15%;
+    }
+
+    .textos {
+        top: 18%;
+        left: 45%;
+        font-size: 16px;
+        width: 100%;
+    }
+
+    .textos__h2 {
+        top: 30%;
+        left: 45%;
+        font-size: 10px;
+        width: 120%;
+    }
+
+    .foto {
+        top: 14%;
+        display: flex;
+    }
 }
